force-app/main/default/objects/Customer_Onboarding__c/Customer_Onboarding__c.object-meta.xml
<CustomObject>
    <label>Customer Onboarding</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Customer Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Onboarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>