force-app/main/default/objects/Customer_Onboarding__c/fields/Accept_Emailed_Invoices_Email__c.field-meta.xml
<CustomField>
    <fullName>Accept_Emailed_Invoices_Email__c</fullName>
    <label>Accept Emailed Invoices Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>