force-app/main/default/objects/Customer_Onboarding__c/fields/Accounts_Payable_Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Department_Email__c</fullName>
    <label>Accounts Payable Department Email</label>
    <type>Email</type>
</CustomField>