force-app/main/default/objects/Customer_Onboarding__c/fields/Accounts_Payable_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Department_Name__c</fullName>
    <label>Accounts Payable Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>