force-app/main/default/objects/Customer_Onboarding__c/fields/Accounts_Payable_Department_Phone__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Department_Phone__c</fullName>
    <label>Accounts Payable Department Phone</label>
    <type>Phone</type>
</CustomField>