force-app/main/default/objects/Customer_Onboarding__c/fields/Accounts_Payable_Dpt_Invoices_emailed_to__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Payable_Dpt_Invoices_emailed_to__c</fullName>
    <label>Accounts Payable Dpt Invoices emailed to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>