force-app/main/default/objects/Customer_Onboarding__c/fields/After_hours_emergency_contact_Cell__c.field-meta.xml
<CustomField>
    <fullName>After_hours_emergency_contact_Cell__c</fullName>
    <label>After hours emergency contact Cell</label>
    <type>Phone</type>
</CustomField>