force-app/main/default/objects/Customer_Onboarding__c/fields/After_hours_emergency_contact_Name__c.field-meta.xml
<CustomField>
    <fullName>After_hours_emergency_contact_Name__c</fullName>
    <label>After hours emergency contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>