force-app/main/default/objects/Customer_Onboarding__c/fields/Bill_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Address__c</fullName>
    <label>Bill to Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>