force-app/main/default/objects/Customer_Onboarding__c/fields/Bill_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Email__c</fullName>
    <label>Bill to Email</label>
    <type>Email</type>
</CustomField>