force-app/main/default/objects/Customer_Onboarding__c/fields/Bill_to_Phone__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Phone__c</fullName>
    <label>Bill to Phone</label>
    <type>Phone</type>
</CustomField>