force-app/main/default/objects/Customer_Onboarding__c/fields/BOL_recipient_Email__c.field-meta.xml
<CustomField>
    <fullName>BOL_recipient_Email__c</fullName>
    <label>BOL recipient Email</label>
    <type>Email</type>
</CustomField>