force-app/main/default/objects/Customer_Onboarding__c/fields/BOL_Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>BOL_Recipient_Name__c</fullName>
    <label>BOL Recipient Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>