force-app/main/default/objects/Customer_Onboarding__c/fields/Care_of_Party__c.field-meta.xml
<CustomField>
    <fullName>Care_of_Party__c</fullName>
    <label>Care of Party</label>
    <type>TextArea</type>
</CustomField>