force-app/main/default/objects/Customer_Onboarding__c/fields/Consignee_Address__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Address__c</fullName>
    <label>Consignee Address</label>
    <type>TextArea</type>
</CustomField>