force-app/main/default/objects/Customer_Onboarding__c/fields/Consignee_Phone__c.field-meta.xml
<CustomField>
    <fullName>Consignee_Phone__c</fullName>
    <label>Consignee Phone</label>
    <type>Phone</type>
</CustomField>