force-app/main/default/objects/Customer_Onboarding__c/fields/Contact_to_setup_portal_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_to_setup_portal_Email__c</fullName>
    <label>Contact to setup portal Email</label>
    <type>Email</type>
</CustomField>