force-app/main/default/objects/Customer_Onboarding__c/fields/Contact_to_setup_portal_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_to_setup_portal_Name__c</fullName>
    <label>Contact to setup portal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>