force-app/main/default/objects/Customer_Onboarding__c/fields/Contact_to_setup_portal_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_to_setup_portal_Phone__c</fullName>
    <label>Contact to setup portal Phone</label>
    <type>Phone</type>
</CustomField>