force-app/main/default/objects/Customer_Onboarding__c/fields/Custom_Broker_Email__c.field-meta.xml
<CustomField>
    <fullName>Custom_Broker_Email__c</fullName>
    <label>Custom Broker Email</label>
    <type>Email</type>
</CustomField>