force-app/main/default/objects/Customer_Onboarding__c/fields/Custom_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Broker_Name__c</fullName>
    <label>Custom Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>