force-app/main/default/objects/Customer_Onboarding__c/fields/Custom_Broker_Phone__c.field-meta.xml
<CustomField>
    <fullName>Custom_Broker_Phone__c</fullName>
    <label>Custom Broker Phone</label>
    <type>Phone</type>
</CustomField>