force-app/main/default/objects/Customer_Onboarding__c/fields/Delivery_Appointement__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Appointement__c</fullName>
    <label>Delivery Appointement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>