force-app/main/default/objects/Customer_Onboarding__c/fields/Drayage_Carrier_Inland_Email__c.field-meta.xml
<CustomField>
    <fullName>Drayage_Carrier_Inland_Email__c</fullName>
    <label>Drayage Carrier Inland Email</label>
    <type>Email</type>
</CustomField>