force-app/main/default/objects/Customer_Onboarding__c/fields/Drayage_Carrier_Inland_Name__c.field-meta.xml
<CustomField>
    <fullName>Drayage_Carrier_Inland_Name__c</fullName>
    <label>Drayage Carrier Inland Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>