force-app/main/default/objects/Customer_Onboarding__c/fields/Drayage_Carrier_Inland_Phone__c.field-meta.xml
<CustomField>
    <fullName>Drayage_Carrier_Inland_Phone__c</fullName>
    <label>Drayage Carrier Inland Phone</label>
    <type>Phone</type>
</CustomField>