force-app/main/default/objects/Customer_Onboarding__c/fields/EDI_Capable__c.field-meta.xml
<CustomField>
    <fullName>EDI_Capable__c</fullName>
    <label>EDI_Capable</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>