force-app/main/default/objects/Customer_Onboarding__c/fields/EDI_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>EDI_Contact_Email__c</fullName>
    <label>EDI Contact Email</label>
    <type>Email</type>
</CustomField>