force-app/main/default/objects/Customer_Onboarding__c/fields/EDI_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>EDI_Contact_Name__c</fullName>
    <label>EDI Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>