force-app/main/default/objects/Customer_Onboarding__c/fields/EDI_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>EDI_Contact_Phone__c</fullName>
    <label>EDI Contact Phone</label>
    <type>Phone</type>
</CustomField>