force-app/main/default/objects/Customer_Onboarding__c/fields/EDI_for_OrderEntry_and_or_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>EDI_for_OrderEntry_and_or_Invoicing__c</fullName>
    <label>EDI_for_OrderEntry_and/or_Invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Order Entry</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>