force-app/main/default/objects/Customer_Onboarding__c/fields/Equipment_type_requirements_restrictions__c.field-meta.xml
<CustomField>
    <fullName>Equipment_type_requirements_restrictions__c</fullName>
    <label>Equipment type requirements/restrictions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>