force-app/main/default/objects/Customer_Onboarding__c/fields/Invoice_Address__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Address__c</fullName>
    <label>Invoice Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>