force-app/main/default/objects/Customer_Onboarding__c/fields/Invoice_Portal__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Portal__c</fullName>
    <label>Invoice Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>