force-app/main/default/objects/Customer_Onboarding__c/fields/Lab_Technical_Department_COA_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Lab_Technical_Department_COA_Recipient__c</fullName>
    <label>Lab Technical Department COA Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField>