force-app/main/default/objects/Customer_Onboarding__c/fields/Lab_Technical_Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Lab_Technical_Department_Email__c</fullName>
    <label>Lab Technical Department Email</label>
    <type>Email</type>
</CustomField>