force-app/main/default/objects/Customer_Onboarding__c/fields/Lab_Technical_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Lab_Technical_Department_Name__c</fullName>
    <label>Lab Technical Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>