force-app/main/default/objects/Customer_Onboarding__c/fields/Lab_Technical_Department_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lab_Technical_Department_Phone__c</fullName>
    <label>Lab Technical Department Phone</label>
    <type>Phone</type>
</CustomField>