force-app/main/default/objects/Customer_Onboarding__c/fields/Language_of_MSDS__c.field-meta.xml
<CustomField>
    <fullName>Language_of_MSDS__c</fullName>
    <label>Language of MSDS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>