force-app/main/default/objects/Customer_Onboarding__c/fields/Mexico_Freight_Broker_Address__c.field-meta.xml
<CustomField>
    <fullName>Mexico_Freight_Broker_Address__c</fullName>
    <label>Mexico Freight Broker_Address</label>
    <type>TextArea</type>
</CustomField>