force-app/main/default/objects/Customer_Onboarding__c/fields/Mexico_Freight_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>Mexico_Freight_Broker_Name__c</fullName>
    <label>Mexico Freight Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>