force-app/main/default/objects/Customer_Onboarding__c/fields/Mexico_Rail_Shipments_Address__c.field-meta.xml
<CustomField>
    <fullName>Mexico_Rail_Shipments_Address__c</fullName>
    <label>Mexico Rail Shipments Address</label>
    <type>TextArea</type>
</CustomField>