force-app/main/default/objects/Customer_Onboarding__c/fields/Mexico_Rail_Shipments_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Mexico_Rail_Shipments_Contact_Name__c</fullName>
    <label>Mexico Rail Shipments Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>