force-app/main/default/objects/Customer_Onboarding__c/fields/Mexico_Rail_Shipments_Email__c.field-meta.xml
<CustomField>
    <fullName>Mexico_Rail_Shipments_Email__c</fullName>
    <label>Mexico Rail Shipments Email</label>
    <type>Email</type>
</CustomField>