force-app/main/default/objects/Customer_Onboarding__c/fields/Mexico_Rail_Shipments_Phone__c.field-meta.xml
<CustomField>
    <fullName>Mexico_Rail_Shipments_Phone__c</fullName>
    <label>Mexico Rail Shipments Phone</label>
    <type>Phone</type>
</CustomField>