force-app/main/default/objects/Customer_Onboarding__c/fields/Notify_Name__c.field-meta.xml
<CustomField>
    <fullName>Notify_Name__c</fullName>
    <label>Notify Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>