force-app/main/default/objects/Customer_Onboarding__c/fields/Notify_Party_1_Address__c.field-meta.xml
<CustomField>
    <fullName>Notify_Party_1_Address__c</fullName>
    <label>Notify Party 1 Address</label>
    <type>TextArea</type>
</CustomField>