force-app/main/default/objects/Customer_Onboarding__c/fields/Notify_Party_Address_2_Name__c.field-meta.xml
<CustomField>
    <fullName>Notify_Party_Address_2_Name__c</fullName>
    <label>Notify Party Address 2 Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>