force-app/main/default/objects/Customer_Onboarding__c/fields/Notify_Phone__c.field-meta.xml
<CustomField>
    <fullName>Notify_Phone__c</fullName>
    <label>Notify Phone</label>
    <type>Phone</type>
</CustomField>