force-app/main/default/objects/Customer_Onboarding__c/fields/Port_of_Unloading__c.field-meta.xml
<CustomField>
    <fullName>Port_of_Unloading__c</fullName>
    <label>Port of Unloading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>