force-app/main/default/objects/Customer_Onboarding__c/fields/Preferred_Equipment_to_determine_payload__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Equipment_to_determine_payload__c</fullName>
    <label>Preferred Equipment to determine payload</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C20</fullName>
            </value>
            <value>
                <fullName>C40</fullName>
            </value>
            <value>
                <fullName>H40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>