force-app/main/default/objects/Customer_Onboarding__c/fields/Price_Negotiator_Email__c.field-meta.xml
<CustomField>
    <fullName>Price_Negotiator_Email__c</fullName>
    <label>Price Negotiator Email</label>
    <type>Email</type>
</CustomField>