force-app/main/default/objects/Customer_Onboarding__c/fields/Price_Negotiator_Name__c.field-meta.xml
<CustomField>
    <fullName>Price_Negotiator_Name__c</fullName>
    <label>Price Negotiator Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>