force-app/main/default/objects/Customer_Onboarding__c/fields/Price_Negotiator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Price_Negotiator_Phone__c</fullName>
    <label>Price Negotiator Phone</label>
    <type>Phone</type>
</CustomField>