force-app/main/default/objects/Customer_Onboarding__c/fields/Purchasing_Department_Email__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Department_Email__c</fullName>
    <label>Purchasing Department Email</label>
    <type>Email</type>
</CustomField>