force-app/main/default/objects/Customer_Onboarding__c/fields/Purchasing_Department_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Department_Name__c</fullName>
    <label>Purchasing Department Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>