force-app/main/default/objects/Customer_Onboarding__c/fields/Purchasing_Department_Phone__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Department_Phone__c</fullName>
    <label>Purchasing Department Phone</label>
    <type>Phone</type>
</CustomField>