force-app/main/default/objects/Customer_Onboarding__c/fields/Rail_Destination_City__c.field-meta.xml
<CustomField>
    <fullName>Rail_Destination_City__c</fullName>
    <label>Rail Destination City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>