force-app/main/default/objects/Customer_Onboarding__c/fields/Rail_Freight_Payer__c.field-meta.xml
<CustomField>
    <fullName>Rail_Freight_Payer__c</fullName>
    <label>Rail Freight Payer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>