force-app/main/default/objects/Customer_Onboarding__c/fields/Rail_Routing__c.field-meta.xml
<CustomField>
    <fullName>Rail_Routing__c</fullName>
    <label>Rail Routing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>