force-app/main/default/objects/Customer_Onboarding__c/fields/Receiving_contact_per_site_warehouse__c.field-meta.xml
<CustomField>
    <fullName>Receiving_contact_per_site_warehouse__c</fullName>
    <label>Receiving contact per site/warehouse</label>
    <type>TextArea</type>
</CustomField>