force-app/main/default/objects/Customer_Onboarding__c/fields/Request_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Request_Complaint__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request &amp; Complaint</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Customer Onboarding</relationshipLabel>
    <relationshipName>Customer_Onboarding</relationshipName>
    <type>Lookup</type>
</CustomField>