force-app/main/default/objects/Customer_Onboarding__c/fields/Requested_port_of_entry__c.field-meta.xml
<CustomField>
    <fullName>Requested_port_of_entry__c</fullName>
    <label>Requested port of entry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>