force-app/main/default/objects/Customer_Onboarding__c/fields/Ship_to_Email__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Email__c</fullName>
    <label>Ship to Email</label>
    <type>Email</type>
</CustomField>