force-app/main/default/objects/Customer_Onboarding__c/fields/Ship_to_Phone__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Phone__c</fullName>
    <label>Ship to Phone</label>
    <type>Phone</type>
</CustomField>