force-app/main/default/objects/Customer_Onboarding__c/fields/Tax_Exempt_Ship_To__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exempt_Ship_To__c</fullName>
    <label>Tax Exempt Ship To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>