force-app/main/default/objects/Customer_Onboarding__c/fields/TaxId_VATNo_RFC__c.field-meta.xml
<CustomField>
    <fullName>TaxId_VATNo_RFC__c</fullName>
    <label>TaxId/VATNo/RFC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>