force-app/main/default/objects/Customer_Onboarding__c/fields/Type_of_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Invoicing__c</fullName>
    <label>Type-of Invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Invoicing</fullName>
            </value>
            <value>
                <fullName>Combined Invoicing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>