force-app/main/default/objects/Customer_Onboarding__c/fields/US_Freight_Broker_Address__c.field-meta.xml
<CustomField>
    <fullName>US_Freight_Broker_Address__c</fullName>
    <label>US Freight Broker Address</label>
    <type>TextArea</type>
</CustomField>