force-app/main/default/objects/Customer_Onboarding__c/fields/US_Freight_Broker_Name__c.field-meta.xml
<CustomField>
    <fullName>US_Freight_Broker_Name__c</fullName>
    <label>US Freight Broker Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>